force-app/main/default/objects/Resource_Summary__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Resource Summaries</relationshipLabel>
    <relationshipName>Resource_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>