force-app/main/default/objects/Resource_Summary__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>Resource Summaries</relationshipLabel>
    <relationshipName>Resource_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>