force-app/main/default/objects/Resource_Summary__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Resource Summaries</relationshipLabel>
    <relationshipName>Resource_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>