force-app/main/default/objects/Resource_Summary__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>SFDC_Services_Project__c</referenceTo>
    <relationshipLabel>Resource Summaries</relationshipLabel>
    <relationshipName>Resource_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>