force-app/main/default/objects/Resource_Summary__c/fields/Service_Invoice_to_be_sent_this_month__c.field-meta.xml
<CustomField>
    <fullName>Service_Invoice_to_be_sent_this_month__c</fullName>
    <formula>IF(NOT(ISNULL(Invoice_Line__r.blng__Invoice__r.Service_Invoice_Batch_Number__c)) &amp;&amp;   
(Invoice_Line__r.blng__Invoice__r.Service_Invoice_Batch_Number__c =  Project__r.Latest_Service_Invoice_Batch__c) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Invoice to be sent this month</label>
    <type>Checkbox</type>
</CustomField>