force-app/main/default/objects/Resource_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>OA_Invoice_ID__c</columns>
    <columns>Product__c</columns>
    <columns>Resource__c</columns>
    <columns>Hours__c</columns>
    <columns>Total__c</columns>
    <columns>Rate__c</columns>
    <columns>Order_Product__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>