force-app/main/default/objects/Resource_Summary__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Line__c</columns>
    <columns>Order_Product__c</columns>
    <columns>OA_Invoice_ID__c</columns>
    <columns>Project__c</columns>
    <columns>Service_Invoice_to_be_sent_this_month__c</columns>
    <columns>Total__c</columns>
    <columns>Contract__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>